[gd_scene load_steps=3 format=2]

[ext_resource path="res://Code/Resources.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Menus/GeneralTheme.tres" type="Theme" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.223529, 0.2, 0.235294, 1 )

[node name="Resources" type="Label" parent="."]
anchor_left = 0.242188
anchor_top = -0.0516667
anchor_right = 0.242188
anchor_bottom = -0.0516667
margin_top = 54.0
margin_right = 182.0
margin_bottom = 71.0
rect_scale = Vector2( 3, 3 )
theme = ExtResource( 2 )
text = "Resources"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="List" type="Label" parent="Resources"]
margin_left = -47.0002
margin_top = 24.6667
margin_right = 797.0
margin_bottom = 141.667
rect_scale = Vector2( 0.33, 0.33 )
theme = ExtResource( 2 )
text = "level 3 asset source
https://opengameart.org/content/castle-tiles-for-rpgs 
level 2 asset source 
https://limezu.itch.io/moderninteriors


Background Music
https://opengameart.org/content/hungry-dino-9-chiptune-tracks-10-sfx"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="BackToMenu" type="Button" parent="VBoxContainer"]
margin_right = 182.0
margin_bottom = 23.0
theme = ExtResource( 2 )
text = "Back to Main Menu"

[node name="Credits" type="Button" parent="VBoxContainer"]
margin_top = 27.0
margin_right = 182.0
margin_bottom = 50.0
theme = ExtResource( 2 )
text = "Credits"
icon_align = 1

[connection signal="button_down" from="VBoxContainer/BackToMenu" to="." method="_on_BackToMenu_button_down"]
[connection signal="pressed" from="VBoxContainer/BackToMenu" to="." method="_on_BackToMenu_pressed"]
[connection signal="button_down" from="VBoxContainer/Credits" to="." method="_on_Credits_button_down"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_Credits_pressed"]
